[project]
name = "dedupe"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "imagededup",
    "numpy",
    "pillow",
]

[project.scripts]
dedupe = "dedupe:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["dedupe.py"]
